style.css
:root {
  --main-bg-color: #001212;
}

* { box-sizing: border-box; }

html, body { 
  height: 100vh; 
  margin: 0;
  overflow-y: hidden;
  background-color: var(--main-bg-color);
}

img {
  display: block;
  max-width: 100%;
  max-height: 100%;
}

.gallery {
  display: flex;
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
}

.gallery .slide {
  scroll-snap-align: center;
  scroll-snap-stop: always;

  width: 100vw;
  height: 100vh;
  flex: 0 0 100vw;

  display: flex;
  gap: 10%;
  justify-content: center;
  padding: 5% 10%;
}

#s2 img:first-child {
  justify-self: end;
}

